refactor: delete useless files
delete: comments
fix: buffer logic

--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -12,15 +12,11 @@
 }
 
 .display .buffer {
-  direction: ltr;
-  font-size: 18px;
-  line-height: 21px;
-}
-.bufferInput {
   display: grid;
   /* padding: auto 17px; */
   font-size: 18px;
   width: 100%;
+  overflow-x: hidden;
   /* line-height: 21px; */
   background-color: transparent;
   border: 0;
