--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-* {
+*,
+::after,
+::before {
   box-sizing: border-box;
 }
 
@@ -10,7 +12,7 @@ body {
   margin: 0;
 }
 body {
-  display: flex;
+  /* display: flex; */
 }
 
 @font-face {
@@ -24,10 +26,7 @@ body {
 
 #app {
   font-family: Helvetica, Arial, sans-serif;
-  /*   -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50; */
+  font-size: 18px;
   display: flex;
   justify-content: center;
   flex: 1 0;
