--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,17 +1,10 @@
 .calculator {
+  display: grid;
+  grid-template-rows: 1fr 2fr;
   margin: 30px 41px 60px 33px;
   height: 278px;
   width: 234px;
-  background: #6D686F;
+  background: #6d686f;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(43.5943px);
   border-radius: 4px;
-  display: flex;
-  flex-flow: column nowrap;
-  /* grid-template-rows:  5em 200px 200px;  */
-  /* grid-template-columns: 200px 5em 50%;  */
-}
-.display {
-  height: 81px;
-  width: 100%;
 }
